chore: Bump to Gradle 7